2004-11-17  Sven Neumann  <sven@gimp.org>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): removed --enable-gtk-doc
	here since it only causes 'make distcheck' to break earlier as usual.

2004-11-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/rcm/Makefile.am
	* plug-ins/rcm/rcm_callback.c
	* plug-ins/rcm/rcm_dialog.c
	* plug-ins/rcm/rcm_stock.[ch]: applied a patch from Karine Proot
	that replaces the XPM icons with stock icons (bug #140202).

	* plug-ins/rcm/pixmaps/*.xpm: removed.

	* plug-ins/Lighting/lighting_stock.c
	* plug-ins/MapObject/mapobject_stock.c
	* plug-ins/gfig/gfig-stock.c: fixed a common but harmless mistake
	in the icon factory code.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* app/widgets/gimpvectorstreeview.c: Hide SVG drop g_print under
	be_verbose.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.py: Handle placeholder defaults for gimp
	objects (bug #158392). Patch by Joao S. O. Bueno.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.py: Use img.name if filename is not
	available (bug #158392). Patch by Joao S. O. Bueno.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/gimpui.py: Add a palette selector (bug #155325).
	Patch by Joao S. O. Bueno.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Fix -fu slider behavior (bug #155103).
	Patch by Joao S. O. Bueno.
	
2004-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/glasstile.c: Remove unnecessary G_OBJECT() casts.

2004-11-16  Manish Singh  <yosh@gimp.org>

	* configure.in: 
	* plug-ins/pygimp/Makefile.am: Compile pygimp with
	-fno-strict-aliasing if the compiler supports it.

	* plug-ins/pygimp/gimpui.py: Make "..." into "Browse..." for
	everything but the filesel, for slightly more consistency with
	script-fu. Addresses #124791.

	* plug-ins/pygimp/gimpmodule.c: Wrapped
	gimp_context_{get,set}_gradient and
	gimp_gradient_get_{uniform,custom}_samples. Deprecated the deprecated